--- a/src/style.css
+++ b/src/style.css
@@ -46,10 +46,11 @@
 /*   -webkit-text-size-adjust: 100%; */
 /* } */
 
-/* body { */
-/*   margin: 0; */
+body {
+    background-color: pink;
+    margin: 0;
 /*   display: flex; */
 /*   place-items: center; */
 /*   min-width: 320px; */
 /*   min-height: 100vh; */
-/* } */
+}
